--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.2.0",
     "core-js": "^3.8.3",
     "register-service-worker": "^1.7.2",
+    "v-calendar": "^2.4.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
